# gras-devel-tools

./: CMakeLists.txt
cmake/: template_CMakeLists.txt
modules/: FindGMP.cmake  FindGooglePerfTools.cmake
ports/: CMakeLists.txt
ports/astro/: CMakeLists.txt
ports/astro/gpstk/: CMakeLists.txt
ports/devel/: CMakeLists.txt
ports/devel/ccache/: CMakeLists.txt
ports/devel/dbus/: CMakeLists.txt
ports/devel/doxygen/: CMakeLists.txt
ports/devel/gdb/: CMakeLists.txt
ports/devel/gmp/: CMakeLists.txt
ports/devel/mpfr/: CMakeLists.txt
ports/devel/pcre/: CMakeLists.txt
ports/devel/qt/: CMakeLists.txt
ports/devel/valgrind/: CMakeLists.txt
ports/editors/nano/: CMakeLists.txt
ports/graphics/: CMakeLists.txt
ports/lang/: CMakeLists.txt
ports/lang/llvm/: CMakeLists.txt
ports/math/: CMakeLists.txt
ports/math/gsl/: CMakeLists.txt
ports/sysutils/htop/: CMakeLists.txt
templates/: template_CMakeLists.txt  template_FindPackage.cmake
